# redmine-issue-bulk-creator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/redmine_issue_bulk_creator/: __init__.py
