[project]
name = "redmine-issue-bulk-creator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kazuki Arai", email = "zukain5@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
